--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,15 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import url("//fonts.googleapis.com/css?family=Ubuntu");
 
+body {
+  padding-top: 70px;
+}
+.curl-commands {
+  padding: 40px 15px;
+}
+#commutator_table > tbody > tr{
+  background-color: #67b168;
+}
+.fa-btn {
+  margin-right: 6px;
+}
