--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,3 +1,4 @@
+@import "variables";
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import url("//fonts.googleapis.com/css?family=Ubuntu");
 
